# cmake_minimum_required(VERSION 3.15)
# project(RayTracer)

# set(CMAKE_CXX_STANDARD 14)

# add_executable(RayTracer main.cpp) 

cmake_minimum_required(VERSION 3.0.0)
project(RayTracer VERSION 0.1.0)

# include(CTest)
# enable_testing()

set(CMAKE_CXX_STANDARD 14)

add_executable(RayTracer main.cpp)

# set(CPACK_PROJECT_NAME ${PROJECT_NAME})
# set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
# include(CPack)
